<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="header">My Nanodegree Apps!</string>
    
    <!-- Button Names -->
    <string name="button_spotify_streamer">SPOTIFY STREAMER</string>
    <string name="button_scores_app">SCORES APP</string>
    <string name="button_library_app">LIBRARY APP</string>
    <string name="button_build_it_bigger">BUILD IT BIGGER</string>
    <string name="button_xyz_reader">XYZ READER</string>
    <string name="button_capstone">CAPSTONE: MY OWN APP</string>
</resources>
