<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical"
              android:background="@color/background"
                tools:context=".MainActivity">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/header"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:gravity="center"/>

    <Button
            android:id="@+id/button_spotify_streamer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_spotify_streamer"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:background="@color/button_orange"
            android:layout_marginLeft="@dimen/button_side_margin"
            android:layout_marginRight="@dimen/button_side_margin"/>
    <Button
            android:id="@+id/button_scores_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_scores_app"
            android:layout_gravity="center"
            android:background="@color/button_orange"
            android:layout_marginLeft="@dimen/button_side_margin"
            android:layout_marginRight="@dimen/button_side_margin"
            android:layout_marginTop="@dimen/button_top_margin"/>
    <Button
            android:id="@+id/button_library_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_library_app"
            android:layout_gravity="center"
            android:background="@color/button_orange"
            android:layout_marginLeft="@dimen/button_side_margin"
            android:layout_marginRight="@dimen/button_side_margin"
            android:layout_marginTop="@dimen/button_top_margin"/>
    <Button
            android:id="@+id/button_build_it_bigger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_build_it_bigger"
            android:layout_gravity="center"
            android:background="@color/button_orange"
            android:layout_marginLeft="@dimen/button_side_margin"
            android:layout_marginRight="@dimen/button_side_margin"
            android:layout_marginTop="@dimen/button_top_margin"/>
    <Button
            android:id="@+id/button_xyz_reader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_xyz_reader"
            android:layout_gravity="center"
            android:background="@color/button_orange"
            android:layout_marginLeft="@dimen/button_side_margin"
            android:layout_marginRight="@dimen/button_side_margin"
            android:layout_marginTop="@dimen/button_top_margin"/>
    <Button
            android:id="@+id/button_capstone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_capstone"
            android:textColor="@android:color/white"
            android:layout_gravity="center"
            android:background="@color/button_red"
            android:layout_marginLeft="@dimen/button_side_margin"
            android:layout_marginRight="@dimen/button_side_margin"
            android:layout_marginTop="@dimen/button_top_margin"/>

</LinearLayout>
